--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -17,6 +17,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
+  <script src="/js/edit.js"></script>
+
   <title>Rakus Items</title>
 </head>
 
@@ -26,79 +28,52 @@
 
   <!-- details -->
   <div id="input-main" class="container">
-    <a type="button" class="btn btn-default" href="./list.html"><i class="fa fa-reply"></i> back</a>
+    <a type="button" class="btn btn-default" th:href="@{/}" onclick="window.history.back(); return false;"><i
+        class="fa fa-reply"></i> back</a>
     <h2>Add</h2>
 
     <!-- add form -->
-    <form action="#" method="POST" class="form-horizontal">
+    <form th:action="@{/add}" method="POST" class="form-horizontal" th:object="${addItemForm}">
       <!-- name -->
       <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">name</label>
         <div class="col-sm-8">
-          <input type="text" class="form-control" id="inputName" />
-          <span class="text-danger">error:may not be empty</span>
+          <input type="text" class="form-control" th:field="*{name}" />
+          <span class="text-danger" th:if="*{#fields.hasErrors('name')}" th:errors="*{name}">error:may not be empty</span>
         </div>
       </div>
       <!-- price -->
       <div class="form-group">
         <label for="price" class="col-sm-2 control-label">price</label>
         <div class="col-sm-8">
-          <input type="text" class="form-control" id="price" />
-          <span class="text-danger">error:may not be empty</span>
+          <input type="text" class="form-control" th:field="*{price}" />
+          <span class="text-danger" th:if="*{#fields.hasErrors('price')}" th:errors="*{price}">error:may not be empty</span>
         </div>
       </div>
       <!-- category -->
+
       <div class="form-group">
         <label for="category" class="col-sm-2 control-label">category</label>
         <div class="col-sm-8">
-          <select class="form-control">
-            <option>-- parentCategory --</option>
-            <option>parentCategory1</option>
-            <option>parentCategory2</option>
-            <option>parentCategory3</option>
-            <option>parentCategory4</option>
-            <option>parentCategory5</option>
+          <select class="form-control parent" th:field="*{parent}">
+            <option value="">- parentCategory -</option>
           </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="category" class="col-sm-2 control-label"></label>
-        <div class="col-sm-8">
-          <select class="form-control">
-            <option>-- childCategory --</option>
-            <option>childCategory1</option>
-            <option>childCategory2</option>
-            <option>childCategory3</option>
-            <option>childCategory4</option>
-            <option>childCategory5</option>
+          <select class="form-control child" th:field="*{child}">
+            <option value="">- childCategory -</option>
           </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="category" class="col-sm-2 control-label"></label>
-        <div class="col-sm-8">
-          <select class="form-control">
-            <option>-- grandChild --</option>
-            <option>grandChild1</option>
-            <option>grandChild2</option>
-            <option>grandChild3</option>
-            <option>grandChild4</option>
-            <option>grandChild5</option>
+          <select class="form-control grandChild" th:field="*{grandChild}">
+            <option value="">- grandChild -</option>
           </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="category" class="col-sm-2 control-label"></label>
-        <div class="col-sm-8">
-          <span class="text-danger">error:may not be empty</span>
+          <div class="text-danger" th:if="*{#fields.hasErrors('parent')}" th:errors="*{parent}">error:may not be empty</div>
+          <div class="text-danger" th:if="*{#fields.hasErrors('child')}" th:errors="*{child}">error:may not be empty</div>
+          <div class="text-danger" th:if="*{#fields.hasErrors('grandChild')}" th:errors="*{grandChild}">error:may not be empty</div>
         </div>
       </div>
       <!-- brand -->
       <div class="form-group">
         <label for="brand" class="col-sm-2 control-label">brand</label>
         <div class="col-sm-8">
-          <input type="text" id="brand" class="form-control" name="brand" />
-          <span class="text-danger">error:may not be empty</span>
+          <input type="text" id="brand" class="form-control" th:field="*{brand}" />
         </div>
       </div>
       <!-- condition -->
@@ -106,28 +81,22 @@
         <label for="condition" class="col-sm-2 control-label">condition</label>
         <div class="col-sm-8">
           <label for="condition1" class="radio-inline">
-            <input type="radio" name="condition" id="condition1" value="1" /> 1
+            <input type="radio" name="condition" id="condition1" value="1" th:field="*{condition}" /> 1
           </label>
           <label for="condition2" class="radio-inline">
-            <input type="radio" name="condition" id="condition2" value="2" /> 2
+            <input type="radio" name="condition" id="condition2" value="2" th:field="*{condition}" /> 2
           </label>
           <label for="condition3" class="radio-inline">
-            <input type="radio" name="condition" id="condition3" value="3" /> 3
+            <input type="radio" name="condition" id="condition3" value="3" th:field="*{condition}" /> 3
           </label>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="category" class="col-sm-2 control-label"></label>
-        <div class="col-sm-8">
-          <span class="text-danger">error:may not be empty</span>
+          <div class="text-danger" th:if="*{#fields.hasErrors('condition')}" th:errors="*{condition}">error:may not be empty</div>
         </div>
       </div>
       <!-- description -->
       <div class="form-group">
         <label for="description" class="col-sm-2 control-label">description</label>
         <div class="col-sm-8">
-          <textarea name="description" id="description" class="form-control" rows="5"></textarea>
-          <span class="text-danger">error:may not be empty</span>
+          <textarea class="form-control" th:field="*{description}" rows="5"></textarea>
         </div>
       </div>
       <!-- submit button -->
@@ -137,6 +106,12 @@
         </div>
       </div>
     </form>
+    <!-- category -->
+    <div class="category" th:object="${addItemForm}">
+      <input type="hidden" th:field="*{parent}">
+      <input type="hidden" th:field="*{child}">
+      <input type="hidden" th:field="*{grandChild}">
+    </div>
   </div>
 </body>
 
