--- a/src/main/resources/templates/add_category.html
+++ b/src/main/resources/templates/add_category.html
@@ -63,6 +63,7 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" name="cmd" value="another" class="btn btn-default">Submit & Add another category</button>
         </div>
       </div>
     </form>
