--- a/src/main/resources/templates/list_category.html
+++ b/src/main/resources/templates/list_category.html
@@ -32,7 +32,7 @@
   <div id="main" class="container-fluid">
     <!-- addCategory link -->
     <div id="addCategoryButton">
-      <a class="btn btn-default" th:href="@{/category/to-add}"><i class="fa fa-plus-square-o"></i> Add New Category</a>
+      <a class="btn btn-default" th:href="@{/category/toAdd}"><i class="fa fa-plus-square-o"></i> Add New Category</a>
     </div>
 
 
